# aoc2-trabalho2

./: Cargo.toml  README_FIRST.txt  Readme.md  relatorio.md
src/: cache.rs  cli.yml  csimlib.rs  main.rs  regular.rs
tests/: cache.rs
